src/widgets/recruit/main/header/style.module.scss
@use "@bigtablet/design-system/scss/token" as token;

.recruit_header {
  @include token.flex_column;
  width: 100%;
  gap: token.$spacing_2xl;
  color: token.$text_normal;
  padding: token.$spacing_3xl 0 token.$spacing_xl;
  margin: 0 auto;
}

.recruit_header_text {
  @include token.flex_column;
  gap: token.$spacing_sm;

  h2 {
    @include token.heading_2;
    font-size: token.$font_size_2xl;
    color: token.$text_strong;
  }

  p {
    @include token.body_medium;
    font-size: token.$font_size_lg;
    color: token.$text_subtle;
  }
}

.recruit_divider {
  width: 100%;
  height: 1px;
  background: token.$color_border_light;
}

.recruit_search {
  @include token.flex_center;
  flex-wrap: wrap;
  gap: token.$spacing_sm;
  width: 100%;
}

